<resources>
    <string name="app_name">Remedi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hour">08:00</string>
    <string name="strength">Strength</string>
    <string name="take_2_pill_s">Take 2 pills</string>
    <string name="name_of_the_medicine">Name of the medicine</string>
    <string name="setup_alarm">Setup a medicine alarm</string>
    <string name="go_back_to_previous_page">Go back to previous page</string>
    <string name="medicine">Medicine</string>
    <string name="what_medicine_would_you_like_to_add">What medicine would you like to add?</string>
    <string name="goes_back_to_previous_page">Goes back to previous page</string>
    <string name="goes_to_the_next_page">Goes to the next page</string>
    <string name="what_form_is_the_med">What form is the med?</string>
    <string name="how_often_do_you_take_it">How often do you use it?</string>
    <string name="clock_icon">Clock icon</string>
    <string name="how_many_do_you_take_per_day">How many times do you use it per day?</string>
    <string name="time">time(s)</string>
    <string name="do_you_want_to_set_a_treatment_duration">Do you want to set a treatment duration?</string>
    <string name="please_insert_the_medicine_alarm_hour">Please, insert the medicine alarm hour:</string>
    <string name="to_see_your_medicine_details">To see your medicine details:</string>
    <string name="click_on_my_medicines">Click on My medicines and then click on the list icon.</string>
    <string name="marking_the_medicine_usage">Marking the medicine usage:</string>
    <string name="click_on_mark_medicine">Click on Mark medicine usage button. If overlay permissions are disabled,
        Mark medicine usage button will appear in the notification.</string>
    <string name="hour_minute_format">0%1$s</string>
    <string name="tv_hour">%1$s:%2$s</string>
    <string name="tv_alarm_and_hour">%1$s\n%2$s</string>
    <string name="tv_medicine">Medicine: %1$s</string>
    <string name="delete_all_alarms_question">Are you sure you want to delete\nall the alarms?</string>
    <string name="delete_all">Delete all</string>
    <plurals name="take_pill">
        <item quantity="one">Take %1$d pill</item>
        <item quantity="other">Take %1$d pills</item>
    </plurals>
    <string name="take_injection_ml">Inject %1$s mL</string>
    <plurals name="take_injection_syringe">
        <item quantity="one">Inject %1$d syringe</item>
        <item quantity="other">Inject %1$d syringes</item>
    </plurals>
    <string name="take_liquid">Use %1$s mL</string>
    <plurals name="take_drops">
        <item quantity="one">Use %1$d drop</item>
        <item quantity="other">Use %1$d drops</item>
    </plurals>
    <string name="inhale_mg">Inhale %1$s mg</string>
    <plurals name="inhale_puff">
        <item quantity="one">Take %1$d puff</item>
        <item quantity="other">Take %1$d puffs</item>
    </plurals>
    <string name="inhale_mL">Inhale %1$s mL</string>
    <string name="apply_pomade">1 application</string>
    <string name="delete_alarm">Delete alarm?</string>
    <string name="medicine_name_n_hh_mm">[Medicine name] \n [HH:MM]</string>
    <string name="are_you_sure_you_want_to_delete_n_the_following_alarm">Are you sure you want to delete\n the following alarm?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_all_alarms">Delete all alarms</string>
    <string name="skip_dose">Skip dose</string>
    <plurals name="pills">
        <item quantity="one">pill</item>
        <item quantity="other">pills</item>
    </plurals>
    <plurals name="drops">
        <item quantity="one">drop</item>
        <item quantity="other">drops</item>
    </plurals>
    <string name="grams">g</string>
    <string name="mls">mL</string>
    <string name="mgs">mg</string>
    <string name="required">*Required</string>
    <string name="please_set_the_medicine_alarm_hour">Please, set the medicine alarm hour:</string>
    <string name="please_set_the_second_medicine_alarm">Please, set the second medicine alarm:</string>
    <string name="please_set_the_third_medicine_alarm">Please, set the third medicine alarm:</string>
    <string name="please_set_the_fourth_medicine_alarm">Please, set the fourth medicine alarm:</string>
    <string name="please_set_the_fifth_medicine_alarm">Please, set the fifth medicine alarm:</string>
    <string name="please_set_the_sixth_medicine_alarm">Please, set the sixth medicine alarm:</string>
    <string name="please_set_the_seventh_medicine_alarm">Please, set the seventh medicine alarm:</string>
    <string name="please_set_the_eighth_medicine_alarm">Please, set the eighth medicine alarm:</string>
    <string name="please_set_the_ninth_medicine_alarm">Please, set the ninth medicine alarm:</string>
    <string name="please_set_the_tenth_medicine_alarm">Please, set the tenth medicine alarm:</string>
    <string name="every_day">Every day</string>
    <string name="every_other_day">Every other day</string>
    <string name="specific_days_of_the_week">Specific days of week</string>
    <string name="every_x_days">Every X days</string>
    <string name="every_x_weeks">Every X weeks</string>
    <string name="every_x_months">Every X months</string>
    <string name="alarm_successfully_deleted">Alarm successfully deleted!</string>
    <string name="pill">Pill</string>
    <string name="injection">Injection</string>
    <string name="liquid">Liquid</string>
    <string name="Drops">Drops</string>
    <string name="inhaler">Inhaler</string>
    <string name="pomade">Pomade</string>
    <string name="channel_for_reminding_users_to_take_their_medicines">Channel for reminding users to take their medicines</string>
    <string name="time_to_use_your_medicine">Time to use your medicine!</string>
    <string name="did_you_forget_to_use_your_medicine">Did you forget to use %1$s?</string>
    <string name="do_not_forget_to_mark_the_medicine_as_used">Do not forget to mark the medicine as used.\n%1$s</string>
    <string name="do_not_forget_to_mark_the_medicine_as_taken">Medicine: %1$s\n%2$s</string>
    <string name="yes_i_do">Yes, I do</string>
    <string name="no_i_don_t">No, I don\'t</string>
    <string name="alarms_successfully_created">Alarms successfully created!</string>
    <string name="select_the_treatment_duration">Select the treatment duration:</string>
    <string name="medicine_already_taken">Medicine already taken &#9989;</string>
    <string name="medicine_not_taken_yet">Medicine not taken yet</string>
    <string name="medicine_skipped">Dose skipped &#10060;</string>
    <string name="quantity">Quantity</string>
    <string name="dose_quantity">Dose quantity</string>
    <string name="set_the_quantity_per_dosage">Set the quantity per dosage:</string>
    <string name="this_app_heavily_depends_on_user_overlay_and_notification_permissions_to_properly_work">This app heavily depends on user overlay and notification permissions to properly work.</string>
    <string name="the_app_must_not_be_used_without_these_permissions">The user\'s notification permission is mandatory for the proper functioning of the application.\n\n User\'s overlay permission\ngranting is optional.</string>
    <string name="go_to_permissions">Go to permissions</string>
    <string name="dismiss">Dismiss</string>
    <string name="permission_required">Permission required</string>
    <string name="alarm">Alarm</string>
    <string name="clock_icon_designed_by_bukeicon_assets_source_from_freepik">Clock icon designed by bukeicon. Assets source from Freepik.</string>
    <string name="_00_00">00:00</string>
    <string name="medicine_name">Medicine name</string>
    <string name="mark_as_used">Mark usage</string>
    <string name="mute_sound">Mute sound</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="medicine_type_icon">Medicine type icon</string>
    <string name="close_to_the_next_dosage">Close to the next dosage</string>
    <string name="mark_medicine_usage">Mark medicine usage</string>
    <string name="are_you_sure_about_using_the_medicine_at_this_hour_n_nask_your_doctor_what_to_do_if_you_miss_a_dose_n_nit_is_usually_advisable_to_skip_the_dose_and_use_the_medicine_at_the_next_scheduled_time">Are you sure about using the medicine at this hour?\n\nAsk your doctor what to do if you miss a dose.\n\nIt is usually advisable to skip the dose and use the medicine at the next scheduled time.</string>
    <string name="medicine_not_taken">Medicine not taken</string>
    <string name="menu_with_medicine_options">Menu with medicine options</string>
    <string name="welcome">Welcome!</string>
    <string name="app_explanation">Remedi is an app to help you keep track of your medication doses.</string>
    <string name="app_needs_permissions">…But first we need your permission.</string>
    <string name="notification_mandatory">"Sending notifications is mandatory for the proper functioning of the application."</string>
    <string name="pillbox_reminders">Pillbox reminders</string>
    <string name="click_on_pillbox">Click on the Pillbox refill reminders button and set a time to receive daily reminders.</string>
    <string name="app_usage">App usage is simple:</string>
    <string name="just_click_on_plus_btn">Just click on the + button and fill out the medicine information.</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="granting_screen_overlay_permission_is_optional">Granting screen overlay permission is optional.\n\nIt\'s recommended if you often don\'t see your notifications.</string>
    <string name="permission_request">Permission request</string>
    <string name="features_text">• Schedule alarms to remind users about their medicines.\n• Receive notifications
    if the user does not mark a medicine as used in the application.\n• Allow users to set a treatment period or
        receive alarms until the medicine is deleted.\n• Receive notifications after setting a daily pillbox refill reminder.
        \n• Warn users if they attempt to mark a medicine as used close to the next dose time.</string>
    <string name="about_us_text">Application developed by Vinícius Santos as his final project for his bachelor\'s degree in Computer Engineering.</string>
    <string name="contact_me">Contact me</string>
    <string name="pill_reminder">Remedi</string>
    <string name="app_description">An Android open source application for helping users to track their medicines doses.</string>
    <string name="features">Features</string>
    <string name="about_me">About me</string>
    <string name="email">Email: vinicius.s.machado@protonmail.com</string>
    <string name="frequent_questions">Frequent questions</string>
    <string name="how_do_i_delete_a_medicine">How do I delete a medicine?</string>
    <string name="answer_how_do_i_delete_a_medicine">Click the ⋮ icon at the right corner of the medicine you want to delete, then select Delete or Delete all.</string>
    <string name="how_do_i_skip_a_dose">How do I skip a dose?</string>
    <string name="answer_how_do_i_skip_a_dose">Click the ⋮ icon at the right corner of the medicine you want to skip the dose, then select Skip dose option.</string>
    <string name="i_m_not_receiving_alarms">I\'m not receiving alarms.</string>
    <string name="app_language">App language</string>
    <string name="request_permissions">Request app permissions</string>
    <string name="disable_battery_optimizations">Disable battery optimizations</string>
</resources>