<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="header_category"
        app:layout="@layout/custom_preference_category"></PreferenceCategory>

    <ListPreference
        app:entries="@array/language_entries"
        app:entryValues="@array/language_values"
        app:icon="@drawable/baseline_language_24"
        app:key="language"
        app:title="@string/app_language"
        app:useSimpleSummaryProvider="true" />

    <Preference
        app:icon="@drawable/baseline_key_24"
        app:key="permissions"
        app:title="@string/request_permissions" />

    <Preference
        app:icon="@drawable/baseline_battery_saver_24"
        app:key="battery_optimizations"
        app:title="@string/disable_battery_optimizations" />

</PreferenceScreen>