<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDeleteAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="12dp">

            <TextView
                android:id="@+id/tvDeleteAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/delete_alarm"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/ivAlert"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvYouSure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/are_you_sure_you_want_to_delete_n_the_following_alarm"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.482"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDeleteAlarm" />

            <TextView
                android:id="@+id/tvMedicineAndHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/medicine_name_n_hh_mm"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvYouSure" />

            <Button
                android:id="@+id/btnDelete"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="#d24141"
                android:text="@string/delete"
                android:textColor="#F6F6F6"
                app:cornerRadius="20dp"
                app:icon="@drawable/baseline_delete_24"
                app:iconTint="#F6F6F6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMedicineAndHour" />

            <Button
                android:id="@+id/btnDeleteAll"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#F3F3F3"
                android:text="@string/delete_all_alarms"
                android:textColor="#686868"
                app:icon="@drawable/baseline_delete_24"
                app:iconTint="#686868"
                app:layout_constraintBottom_toTopOf="@+id/btnCancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnDelete" />

            <Button
                android:id="@+id/btnCancel"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:backgroundTint="#F3F3F3"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:text="@string/cancel"
                android:textColor="#686868"
                app:cornerRadius="20dp"
                app:icon="@drawable/baseline_close_24"
                app:iconTint="#686868"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/ivAlert"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:importantForAccessibility="no"
                app:layout_constraintEnd_toStartOf="@+id/tvDeleteAlarm"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_alert_24"
                app:tint="#d24141" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>